--- a/index.html
+++ b/index.html
@@ -4,6 +4,29 @@
 <head>
   <meta charset="utf-8">
   <title>Abhi's Personal Websi</title>
+
+<style >
+
+
+body {
+  background-color: #3f72af;
+}
+
+hr{
+  background-color: #3f72af;
+  border-style: none;
+  border-top-style: dotted;
+  border-color: grey;
+  border-width: 5px;
+  width: 10%;
+  }
+
+img{
+   height: 100px;
+}
+
+</style>
+
 </head>
 
 <body>
@@ -73,7 +96,7 @@
       <td>
         <table cellspacing=10>
           <tr>
-            <td>Byking</td>
+            <td>Biking</td>
             <td>⭐️⭐️⭐️⭐️⭐️</td>
           </tr>
           <tr>
